--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "postpublish": "zip -j build/d3-chart-xybase.zip -- LICENSE README.md build/d3-chart-xybase.js build/d3-chart-xybase.min.js"
   },
   "devDependencies": {
-    "babel-preset-es2015-rollup": "^1.1.1",
-    "json2module": "0.0",
-    "rollup": "0.25",
-    "rollup-plugin-babel": "^2.4.0",
-    "tape": "4",
-    "uglify-js": "2"
+    "babel-preset-es2015-rollup": "1.1.x",
+    "json2module": "0.0.x",
+    "rollup": "0.26.x",
+    "rollup-plugin-babel": "2.4.x",
+    "tape": "4.5.x",
+    "uglify-js": "2.6.x"
   },
   "dependencies": {
-    "d3-axis": "0.3.2"
+    "d3-axis": "0.3.x"
   }
 }
